fix(/events): bottom spacing on mobile view

--- a/src/components/Events/Events.css
+++ b/src/components/Events/Events.css
@@ -30,4 +30,10 @@
   .events-grid {
     grid-template-columns: 1fr;
   }
-} 
+}
+
+@media (max-width: 575px) {
+  .events-wrapper {
+    padding-bottom: 104px;
+  }
+}
